--- a/src/main/resources/vm/system/certificate.vm
+++ b/src/main/resources/vm/system/certificate.vm
@@ -130,7 +130,7 @@
             {{# layui.each(d, function(index, item){ }}
             <tr>
                 <td>{{ item.name }}</td>
-                <td>{{ item.value }}</td>
+                <td style="padding-left: 10px;">{{ item.value }}</td>
             </tr>
             {{# }); }}
         </table>
@@ -159,224 +159,221 @@
         return y + '-' + m + '-' + d + ' ' + h + ':' + minute + ':' + second;
     }
 
+    var laytpl;
+
     function loadSuccess() {
-        table.render({
-            id: 'tab_certificate',
-            elem: '#tab_certificate',
-            url: './getCertList',
-            // height: 'full-52',
-            even: true,
-            cols: [[
-                {field: 'id', title: 'id', width: '10%'},
-                {field: 'name', title: '名称'},
-                {field: 'domain', title: '域名'},
-                {field: 'effectiveTime', templet: "#tem_effectiveTime", title: '生效时间', width: '14%'},
-                {field: 'expirationTime', templet: "#tem_expirationTime", title: '到期时间', width: '14%'},
-                {field: 'op', title: '操作', align: 'center', toolbar: '#bar_cert', fixed: 'right'}
-            ]],
-            loading: true,
-            response: {
-                statusCode: 200
-            }
-        });
-
-        // 表格工具条事件
-        table.on('tool(tab_certificate)', function (obj) {
-            var data = obj.data;
-            var event = obj.event;
-
-            if ('update' === event) {
-                // 修改
-                updateCert(data);
-            } else if ('delete' === event) {
-                // 删除
-                deleteCert(data);
-            } else if ('export' === event) {
-                window.location.href = "./export?id=" + data.id;
-            } else if ('templte' === event) {
-                openTemplate(data);
-            }
-        });
-
-        //打开模板
-        function openTemplate(data) {
-            // $("#template").removeClass("div-certificate");
-            layer.open({
-                type: 1,
-                title: '模板',
-                content: $('#cert_template'),
-                area: ['40%', '40%'],
-                // btnAlign: 'c',
-                // btn: ['提交'],
-                yes: function (index, layero) {
+        layui.use(['laytpl'], function () {
+            laytpl = layui.laytpl;
+            table.render({
+                id: 'tab_certificate',
+                elem: '#tab_certificate',
+                url: './getCertList',
+                // height: 'full-52',
+                even: true,
+                cols: [[
+                    {field: 'id', title: 'id', width: '10%'},
+                    {field: 'name', title: '名称'},
+                    {field: 'domain', title: '域名'},
+                    {field: 'effectiveTime', templet: "#tem_effectiveTime", title: '生效时间', width: '14%'},
+                    {field: 'expirationTime', templet: "#tem_expirationTime", title: '到期时间', width: '14%'},
+                    {field: 'op', title: '操作', align: 'center', toolbar: '#bar_cert', fixed: 'right'}
+                ]],
+                loading: true,
+                response: {
+                    statusCode: 200
                 }
             });
 
-            var param = [{
-                name: "ssl",
-                value: "on;"
-            }, {
-                name: "listen",
-                value: "443 ssl;"
-            }, {
-                name: "server_name",
-                value: data.domain + ";"
-            }, {
-                name: "ssl_certificate",
-                value: data.cert + ";"
-            }, {
-                name: "ssl_certificate_key",
-                value: data.key + ";"
-            }, {
-                name: "ssl_session_cache",
-                value: "shared:SSL:1m;"
-            }, {
-                name: "ssl_session_timeout",
-                value: "5m;"
-            }, {
-                name: "ssl_ciphers",
-                value: "HIGH:!aNULL:!MD5;"
-            }, {
-                name: "ssl_prefer_server_ciphers  &nbsp;",
-                value: "on;"
-            }];
+            // 表格工具条事件
+            table.on('tool(tab_certificate)', function (obj) {
+                var data = obj.data;
+                var event = obj.event;
+
+                if ('update' === event) {
+                    // 修改
+                    updateCert(data);
+                } else if ('delete' === event) {
+                    // 删除
+                    deleteCert(data);
+                } else if ('export' === event) {
+                    window.location.href = "./export?id=" + data.id;
+                } else if ('templte' === event) {
+                    openTemplate(data);
+                }
+            });
 
 
-            var page = tem_cert.innerHTML;
-            var view = document.getElementById('cert_template');
-            layui.use(['laytpl'], function () {
-                var laytpl = layui.laytpl;
-
-                laytpl(page).render(param, function (html) {
-                    view.innerHTML = html;
+            // 新增证书
+            $('#addCertificate').on('click', function () {
+                // 重置表单
+                document.getElementById('form_certificate').reset();
+                $('#form_certificate [name="id"]').attr('readonly', false).removeClass('layui-disabled');
+                $('#form_certificate [name="path"]').attr('disabled', false);
+                form.render('select');
+                $("#certPath").html("");
+                $("#keyPath").html("");
+                layer.open({
+                    type: 1,
+                    title: '新增证书',
+                    content: $('#div-certificate'),
+                    area: ['60%', '80%'],
+                    btnAlign: 'c',
+                    btn: ['提交'],
+                    yes: function (index, layero) {
+                        $('#form_certificate').attr('action', './addCertificate');
+                        $('#cert_submit').click();
+                    }
                 });
             });
 
-        }
-
-        // 修改证书
-        function updateCert(data) {
-            document.getElementById('form_certificate').reset();
-            $('#form_certificate [name="id"]').attr('readonly', true).addClass('layui-disabled');
-            $('#form_certificate [name="path"]').attr('disabled', 'disabled');
-            form.render('select');
-            for (var key in data) {
-                if ("cert" === key) {
-                    $("#certPath").html(data[key]);
-                } else if ("key" === key) {
-                    $("#keyPath").html(data[key]);
-                } else if ("whitePath" === key) {
-                    document.getElementById('path_' + data[key]).setAttribute('selected', true);
-                } else {
-                    $('#form_certificate [name="' + key + '"]').val(data[key]);
-                }
-            }
-            // 弹出
-            layer.open({
-                type: 1,
-                title: '编辑',
-                content: $('#div-certificate'),
-                area: ['60%', '80%'],
-                btnAlign: 'c',
-                btn: ['提交'],
-                yes: function (index, layero) {
-                    $('#form_certificate').attr('action', './updateCertificate');
-                    $('#cert_submit').click();
-                }
+            // 新增证书
+            $('#refresh').on('click', function () {
+                table.reload('tab_certificate');
             });
-        }
 
-        // 删除证书
-        function deleteCert(data) {
-            layer.confirm('确定删除证书 ' + data.id + '？', {
-                title: '系统提示'
-            }, function (index) {
-                layer.close(index);
+            form.on('submit(submitCert)', function (data) {
+                //获取文件
+                var cert = $("#cert")[0].files[0];
+                var key = $("#key")[0].files[0];
+                var id = $("#id").val();
+                var name = $("#name").val();
+                var path = $("#path").val();
+
+                var formData = new FormData();
+                formData.append("path", path);
+                formData.append("cert", cert);
+                formData.append("key", key);
+                formData.append("name", name);
+                formData.append("id", id);
                 $.ajax({
-                    url: './delete',
+                    url: data.form.action,
                     type: 'POST',
                     dataType: 'json',
-                    data: {id: data.id},
+                    contentType: false,
+                    processData: false,
+                    data: formData,
                     success: function (data) {
+                        layer.msg(data.msg);
                         if (200 == data.code) {
-                            layer.msg('删除成功！');
-                            // 刷新项目列表
-                            table.reload('tab_certificate', {
-                                // height: 'full-52'
-                            });
-                        } else {
-                            layer.msg(data.msg);
+                            layer.closeAll('page');
+                            // 刷新表
+                            table.reload('tab_certificate');
                         }
                     },
                     error: function (err) {
-                        layer.msg('删除失败！');
+                        layer.alert(err.msg);
                     }
                 });
+                return false;
             });
+        });
+    }
+
+    // 修改证书
+    function updateCert(data) {
+        document.getElementById('form_certificate').reset();
+        $('#form_certificate [name="id"]').attr('readonly', true).addClass('layui-disabled');
+        $('#form_certificate [name="path"]').attr('disabled', 'disabled');
+        form.render('select');
+        for (var key in data) {
+            if ("cert" === key) {
+                $("#certPath").html(data[key]);
+            } else if ("key" === key) {
+                $("#keyPath").html(data[key]);
+            } else if ("whitePath" === key) {
+                document.getElementById('path_' + data[key]).setAttribute('selected', true);
+            } else {
+                $('#form_certificate [name="' + key + '"]').val(data[key]);
+            }
         }
-
-        // 新增证书
-        $('#addCertificate').on('click', function () {
-            // 重置表单
-            document.getElementById('form_certificate').reset();
-            $('#form_certificate [name="id"]').attr('readonly', false).removeClass('layui-disabled');
-            $('#form_certificate [name="path"]').attr('disabled', false);
-            form.render('select');
-            $("#certPath").html("");
-            $("#keyPath").html("");
-            layer.open({
-                type: 1,
-                title: '新增证书',
-                content: $('#div-certificate'),
-                area: ['60%', '80%'],
-                btnAlign: 'c',
-                btn: ['提交'],
-                yes: function (index, layero) {
-                    $('#form_certificate').attr('action', './addCertificate');
-                    $('#cert_submit').click();
-                }
-            });
+        // 弹出
+        layer.open({
+            type: 1,
+            title: '编辑',
+            content: $('#div-certificate'),
+            area: ['60%', '80%'],
+            btnAlign: 'c',
+            btn: ['提交'],
+            yes: function (index, layero) {
+                $('#form_certificate').attr('action', './updateCertificate');
+                $('#cert_submit').click();
+            }
         });
+    }
 
-        // 新增证书
-        $('#refresh').on('click', function () {
-            table.reload('tab_certificate');
-        });
-
-        form.on('submit(submitCert)', function (data) {
-            //获取文件
-            var cert = $("#cert")[0].files[0];
-            var key = $("#key")[0].files[0];
-            var id = $("#id").val();
-            var name = $("#name").val();
-            var path = $("#path").val();
-
-            var formData = new FormData();
-            formData.append("path", path);
-            formData.append("cert", cert);
-            formData.append("key", key);
-            formData.append("name", name);
-            formData.append("id", id);
+    // 删除证书
+    function deleteCert(data) {
+        layer.confirm('确定删除证书 ' + data.id + '？', {
+            title: '系统提示'
+        }, function (index) {
+            layer.close(index);
             $.ajax({
-                url: data.form.action,
+                url: './delete',
                 type: 'POST',
                 dataType: 'json',
-                contentType: false,
-                processData: false,
-                data: formData,
+                data: {id: data.id},
                 success: function (data) {
-                    layer.msg(data.msg);
                     if (200 == data.code) {
-                        layer.closeAll('page');
-                        // 刷新表
-                        table.reload('tab_certificate');
+                        layer.msg('删除成功！');
+                        // 刷新项目列表
+                        table.reload('tab_certificate', {});
+                    } else {
+                        layer.msg(data.msg);
                     }
                 },
                 error: function (err) {
-                    layer.alert(err.msg);
+                    layer.msg('删除失败！');
                 }
             });
-            return false;
+        });
+    }
+
+    //打开模板
+    function openTemplate(data) {
+        var param = [{
+            name: "ssl",
+            value: "on;"
+        }, {
+            name: "listen",
+            value: "443 ssl;"
+        }, {
+            name: "server_name",
+            value: data.domain + ";"
+        }, {
+            name: "ssl_certificate",
+            value: data.cert + ";"
+        }, {
+            name: "ssl_certificate_key",
+            value: data.key + ";"
+        }, {
+            name: "ssl_session_cache",
+            value: "shared:SSL:1m;"
+        }, {
+            name: "ssl_session_timeout",
+            value: "5m;"
+        }, {
+            name: "ssl_ciphers",
+            value: "HIGH:!aNULL:!MD5;"
+        }, {
+            name: "ssl_prefer_server_ciphers",
+            value: "on;"
+        }];
+
+        var page = tem_cert.innerHTML;
+        var view = document.getElementById('cert_template');
+
+        laytpl(page).render(param, function (html) {
+            view.innerHTML = html;
+        });
+        layer.open({
+            type: 1,
+            title: '模板',
+            content: $('#cert_template'),
+            area: ['40%', '40%'],
+            // btnAlign: 'c',
+            // btn: ['提交'],
+            yes: function (index, layero) {
+            }
         });
     }
 </script>
