创建用户隐藏系统管理员密码，首页系统管理员修改密码

--- a/src/main/resources/vm/common/sha1.vm
+++ b/src/main/resources/vm/common/sha1.vm
@@ -53,6 +53,9 @@
             return modes;
         }
 
+        if (!fieldValue || fieldValue == "") {
+            return false;
+        }
     ##   密码强度等级说明，字符包括：小写字母、大写字母、数字、特殊字符
     ## 1---密码包含其中之一
     ## 2---密码包含其中之二
