--- a/src/main/resources/vm/index.vm
+++ b/src/main/resources/vm/index.vm
@@ -90,7 +90,7 @@
 <body class="layui-layout-body">
 <div class="layui-layout layui-layout-admin">
     <div class="layui-header">
-        <div class="layui-logo" title="$!jpomManifest.timeStamp">
+        <div class="layui-logo" title="版本时间:$!jpomManifest.timeStamp，进程ID:$!jpomManifest.pid">
             Jpom项目管理系统#if($jpomManifest)<font style="font-size: 10px;">($jpomManifest.version)</font>#end
         </div>
         <ul class="layui-nav layui-layout-left">
