--- a/src/main/resources/vm/system/nginxSetting.vm
+++ b/src/main/resources/vm/system/nginxSetting.vm
@@ -6,21 +6,12 @@
     <title>nginx管理</title>
     <style>
         body {
-            padding: 10px 10px 0px 10px;
-        }
-
-        .div_hidden {
-            display: none;
+            padding: 10px;
         }
 
         .context {
             height: 65vh;
         }
-
-        .x-red {
-            color: red;
-        }
-
     </style>
 </head>
 
@@ -33,8 +24,8 @@
     <div class="layui-tab-content">
         <div class="layui-tab-item layui-show">
             <form action="" class="layui-form" id="fast_form">
-                <input type="text" name="type" value="quick" class="layui-input div_hidden">
-                <input type="text" name="genre" value="$type" class="layui-input div_hidden">
+                <input type="hidden" name="type" value="quick">
+                <input type="hidden" name="genre" value="$type">
                 <div class="layui-form-item">
                     <label class="layui-form-label">文件名称</label>
                     <div class="layui-input-inline">
@@ -113,8 +104,9 @@
                                         </div>
                                     </div>
                                     <div class="layui-form-item">
-                                        <label class="layui-form-label"><span
-                                                class="x-red">*</span>跳转地址</label>
+                                        <label class="layui-form-label">
+                                            <span class="x-red">*</span>跳转地址
+                                        </label>
                                         <div class="layui-input-block">
                                             <input type="text" name="location" value="$!data.location" required
                                                    lay-verify="required" placeholder="设置proxy_pass代理跳转地址"
@@ -135,8 +127,8 @@
         </div>
         <div class="layui-tab-item">
             <form action="" class="layui-form" id="form_ngx">
-                <input type="text" name="type" value="manual" class="layui-input div_hidden">
-                <input type="text" name="genre" value="$type" class="layui-input div_hidden">
+                <input type="hidden" name="type" value="manual">
+                <input type="hidden" name="genre" value="$type">
                 <div class="layui-form-item">
                     <label class="layui-form-label">文件名称</label>
                     <div class="layui-input-inline">
