--- a/src/main/resources/vm/system/nginxSetting.vm
+++ b/src/main/resources/vm/system/nginxSetting.vm
@@ -9,6 +9,10 @@
             padding: 10px;
         }
 
+        .div_hidden {
+            display: none !important;
+        }
+
         .context {
             height: 65vh;
         }
