项目配置页面排版 初始化先提交白名单 项目列表跟随控制台刷新状态

--- a/src/main/resources/vm/common/head.vm
+++ b/src/main/resources/vm/common/head.vm
@@ -41,7 +41,7 @@
                 element.tabChange('mainTabs', lay_id);
             } else {
                 // 创建
-                var tab_content = '<iframe src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
+                var tab_content = '<iframe name="' + options.id + '" src="' + options.url + '" frameborder="0" class="custom-iframe"></iframe>';
                 element.tabAdd('mainTabs', {
                     title: options.title,
                     content: tab_content,
