--- a/src/main/resources/vm/manage/editProject.vm
+++ b/src/main/resources/vm/manage/editProject.vm
@@ -50,12 +50,16 @@
                 </div>
             </div>
             <div class="layui-inline">
-                <label class="layui-form-label">MainClass</label>
+                <label class="layui-form-label"><span class="x-red">*</span>运行方式</label>
                 <div class="layui-input-block">
-                    <input type="text" name="mainClass" placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
-                           value="#if($item)$!item.mainClass#end">
+                    <select name="runMode">
+                        #foreach($itemPath in $runModes)
+                            <option value="$itemPath" #if($item.runMode==$itemPath)selected#end>$itemPath</option>
+                        #end
+                    </select>
                 </div>
             </div>
+
 
         </div>
         <div class="layui-form-item">
@@ -78,6 +82,7 @@
                     </select>
                 </div>
             </div>
+
             <div class="layui-inline">
                 <label class="layui-form-label" title="$!item.log"><span class="x-red">*</span>项目Lib</label>
                 <div class="layui-input-block">
@@ -101,13 +106,10 @@
         </div>
         <div class="layui-form-item">
             <div class="layui-inline">
-                <label class="layui-form-label"><span class="x-red">*</span>运行方式</label>
+                <label class="layui-form-label">MainClass</label>
                 <div class="layui-input-block">
-                    <select name="runMode">
-                        #foreach($itemPath in $runModes)
-                            <option value="$itemPath" #if($item.runMode==$itemPath)selected#end>$itemPath</option>
-                        #end
-                    </select>
+                    <input type="text" name="mainClass" placeholder="程序运行的 main 类(jar模式运行可以不填)" class="layui-input"
+                           value="#if($item)$!item.mainClass#end">
                 </div>
             </div>
         </div>
@@ -131,14 +133,14 @@
             <div class="layui-inline">
                 <label class="layui-form-label">Jvm参数</label>
                 <div class="layui-input-block">
-                    <textarea name="jvm" placeholder="jvm参数,非必填"
+                    <textarea name="jvm" placeholder="jvm参数,非必填.如：-Xmin=512m -Xmax=512m"
                               class="layui-textarea">#if($item)$!item.jvm#end</textarea>
                 </div>
             </div>
             <div class="layui-inline">
                 <label class="layui-form-label">args参数</label>
                 <div class="layui-input-block">
-                    <textarea name="args" placeholder="Main函数 args参数,非必填"
+                    <textarea name="args" placeholder="Main函数args参数,非必填.如：--service.port=8080"
                               class="layui-textarea">#if($item)$!item.args#end</textarea>
                 </div>
             </div>
