项目jar路径情况提示描述调整

--- a/src/main/resources/vm/manage/console.vm
+++ b/src/main/resources/vm/manage/console.vm
@@ -96,7 +96,6 @@
                 setMsg('status');
             };
 
-
             ws.onmessage = function (data) {
                 // 如果是
                 if (data.data.indexOf('{') === 0) {
@@ -284,7 +283,7 @@
     ## 刷新项目数据
     function refreshProjectData() {
         try {
-            top.frames["manage"].reloadTable();
+            top.frames["manage"].location.reload();
         } catch (e) {
             console.error(e);
         }
